Fix home-section mobile view

--- a/src/Components/Blob.css
+++ b/src/Components/Blob.css
@@ -10,3 +10,10 @@
     height: 400px; /* or whatever size you prefer for mobile */
   }
 }
+
+@media (max-width: 550px){
+  .blob{
+    width: 300px;
+    height: 300px;
+  }
+}
